--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,11 @@ jobs:
         run: | 
           pwd
           ls
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
+          git clone git@github:yuez-gdm/$GITHUB_REPOSITORY
       - name: Simple JS Action 
         id: greet
         uses: actions/hello-world-javascript-action@v1
