--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,8 @@
 name: Shell Commands
 
-on: [push]
+on:
+  repository_dispatch:
+    types: ["build"]
 
 jobs:
   run-shell-command:
@@ -19,6 +21,7 @@ jobs:
         shell: python 
   run-windows-commands:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Directory Powershell 
         run: Get-Location
